--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -25,6 +24,13 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 222.2 84% 4.9%;
     --radius: 0.5rem;
+  }
+
+  html, body {
+    @apply h-full w-full;
+    -webkit-overflow-scrolling: touch;
+    position: relative;
+    overscroll-behavior-y: none;
   }
 
   body {
